# log-analysis-api

./: README.md  dockerfile  dune-project  log_analysis_api.opam
_build/: .db  .digest-db  log
_build/default/: log_analysis_api.dune-package  log_analysis_api.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmx
_build/default/lib/: api.pp.ml  command.pp.ml  log.pp.ml  log_analysis_api.cma  log_analysis_api.cmxa  log_analysis_api.cmxs  log_analysis_api.ml-gen  logging.pp.ml  schema.ml  schema.pp.ml
_build/default/lib/.log_analysis_api.objs/: log_analysis_api__Api.impl.all-deps  log_analysis_api__Api.impl.d  log_analysis_api__Command.impl.all-deps  log_analysis_api__Command.impl.d  log_analysis_api__Log.impl.all-deps  log_analysis_api__Log.impl.d  log_analysis_api__Logging.impl.d  log_analysis_api__Schema.impl.d
_build/default/lib/.log_analysis_api.objs/byte/: log_analysis_api.cmi  log_analysis_api.cmo  log_analysis_api.cmt  log_analysis_api__Api.cmi  log_analysis_api__Api.cmo  log_analysis_api__Api.cmt  log_analysis_api__Command.cmi  log_analysis_api__Command.cmo  log_analysis_api__Command.cmt  log_analysis_api__Log.cmi  log_analysis_api__Log.cmo  log_analysis_api__Log.cmt  log_analysis_api__Logging.cmi  log_analysis_api__Logging.cmo  log_analysis_api__Logging.cmt  log_analysis_api__Schema.cmi  (+2 more)
_build/default/lib/.merlin-conf/: lib-log_analysis_api
_build/default/test/.merlin-conf/: exe-test_log_analysis_api
lib/: api.ml  command.ml  dune  log.ml  logging.ml
test/: dune
(+12 files in other folders)
